Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -84,6 +84,7 @@ header {
   padding: 15px 0px;
   z-index:2;
   float: left;
+  width: 25%;
 }
 
 @media @tablet {
@@ -154,7 +155,7 @@ footer p {
   float: right;
   position: relative;
   padding-top: 16px;
-  max-width: 690px;
+  width: 75%;
 }
 
 .widget.extendednavigation a.pull {
@@ -166,7 +167,6 @@ footer p {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
 }
